--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
-        android:icon="@drawable/clean_avatar"
+        android:icon="@drawable/guild_wars_2_companion_logo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/clean_avatar"
+        android:roundIcon="@drawable/guild_wars_2_companion_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.SOA_GuildWars2">
         <activity
